# diversedata-py

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/diversedata/: __init__.py  _bc_indigenous_biz  _bcindigenousbiz  _bcindigenousbiz.py  _genderassessment.py  _globalrights.py  _hcmst.py  _wildfire.py  _womens_march_madness  _womensmarchmadness  _womensmarchmadness.py  diversedata.py
src/diversedata/data_descriptions/: bcindigenousbiz.txt  genderassessment.txt  globalrights.txt  hcmst.txt  wildfire.txt  womensmarchmadness.txt
tests/: test_diversedata.py  test_list_available_datasets.py  test_load_data.py  test_print_data_description.py
